# TARA

./: .cproject  .gitignore  Compare hb  Makefile  Makefile.win  README.md  build.cmd  commit-2fa0f87
examples/: .gitignore  2stage.c  2stage.ctrc  barrier_locks.c  barrier_locks.ctrc  big_example.ctrc  define_use.c  define_use.ctrc  drbd_receiver.c  drbd_receiver.ctrc  em28xx.c  em28xx.ctrc  fib_bench.c  fib_bench.ctrc  i2c_hid.c  i2c_hid.ctrc  lazy01.c  lazy01.ctrc  lc_rc.c  lc_rc.ctrc  locks.c  locks.ctrc  locks_hb.c  locks_hb.ctrc  locks_with_fences.ctrc  loop.c  loop.ctrc  md.c  md.ctrc  read_write_lock.c  read_write_lock.ctrc  reorder_2.c  reorder_2.ctrc  rtl8169-1.ctrc  rtl8169-2.ctrc  rtl8169-3.ctrc  rtl8169-4.ctrc  rtl8169-5.ctrc  rtl8169-6.ctrc  rtl8169.c  (+57 more)
examples/SAS2016/: bakery.ctrc  burns-3.ctrc  burns.ctrc  dekker.c  dekker.ctrc  dekker.ctrc~  dekker.c~  dijkstra.ctrc  lamport.ctrc  lamport.c~  peterson.ctrc  peterson.ctrc~  peterson.c~  run_SAS.sh  scheduler.ctrc  szymanski.ctrc  turn.ctrc  wmm-cycles-2.ctrc
examples/bugs/: 2stage.ctrc  barrier_locks.ctrc  big_example.ctrc  define_use.ctrc  drbd_receiver.ctrc  em28xx.ctrc  fib_bench.ctrc  i2c_hid.ctrc  lazy01.ctrc  lc_rc.ctrc  locks.ctrc  locks_hb.ctrc  loop.ctrc  md.ctrc  read_write_lock.ctrc  reorder_2.ctrc  rtl8169-1.ctrc  rtl8169-2.ctrc  rtl8169-3.ctrc  rtl8169-4.ctrc  rtl8169-5.ctrc  rtl8169-6.ctrc  stateful01.ctrc  usb_serial-1.ctrc  usb_serial-2.ctrc  usb_serial-3.ctrc
examples/c/: arc.cpp  double-mp-rlx.cpp  ex2.cpp  if-else.cpp  iriw-ra.cpp  iriw.cpp  irrwiw.cpp  irwiw.cpp  lb-combo.cpp  lb-cond-3.cpp  lb-cond.cpp  lb-dep.cpp  lb-ra.cpp  lb-rlx.cpp  lb.cpp  mp-ra.cpp  mp-rlx.cpp  mp.cpp  nested-if-test.cpp  order.cpp  order4.cpp  order5.cpp  order6.cpp  order7.cpp  order8.cpp  order9.cpp  race.cpp  rmo-ctrl-dep-1.cpp  rmo-ctrl-dep.cpp  rmo-data-dep-2.cpp  rmo-data-dep.cpp  rmo-no-dep.cpp  rmo.cpp  rwc.cpp  sb-ra.cpp  sb.cpp  sbmp-ra.cpp  screads-mini.cpp  screads.cpp  tmp.cpp  (+3 more)
examples/litmus/: corw.ctrc  corw1.ctrc  mp.ctrc  wmm-litmus-corr1.ctrc  wmm-litmus-cow3r.ctrc  wmm-litmus-rwc.ctrc  wmm-litmus-sb-2+2w.ctrc
examples/sas2016/: run_SAS.sh  wmm-cycles-conv-2.ctrc
examples/synthesis/: 2stage.ctrc  barrier_locks.ctrc  big_example.ctrc  define_use.ctrc  drbd_receiver.ctrc  em28xx.ctrc  fib_bench.ctrc  i2c_hid.ctrc  lazy01.ctrc  lc_rc.ctrc  locks.ctrc  locks_hb.ctrc  loop.ctrc  md.ctrc  read_write_lock.ctrc  reorder_2.ctrc  rtl8169-1.ctrc  rtl8169-2.ctrc  rtl8169-3.ctrc  rtl8169-4.ctrc  rtl8169-5.ctrc  rtl8169-6.ctrc  stateful01.ctrc  usb_serial-1.ctrc  usb_serial-2.ctrc  usb_serial-3.ctrc
examples/tester/: Makefile  all.py  compare.py  gen.py  new.py  test.py  update.py
src/: CMakeLists.txt  TARA.kdev4  main.cpp  options_cmd.cpp  options_cmd.h
src/z3-patch/: api_special_relations.cpp  diff_logic_no_path.h  smt_model_reporter.cpp  special_relations_decl_plugin.cpp  special_relations_decl_plugin.h  theory_special_relations.cpp  theory_special_relations.h  z3.patch
(+360 files in other folders)
